# datasets-backend

./: .flake8  .gitignore  Makefile  README.md  datasets.yaml  pyproject.toml
compose/: dev.yml  docker-compose.yml
src/backend/: __init__.py  app.py  cli.py  config.py  logger.py  router.py  s3.py
src/backend/models/: __init__.py  datasets.py  files.py
tests/datasets/: test_dataset_models.py
