[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend server for datasets application"
authors = ["Guillaume Charbonnier <guillaumecharbonnier@live.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.54.1"
pydantic = "^1.4"
databases = "^0.2.6"
minio = "^5.0.8"
typer = "^0.1.1"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
uvicorn = "^0.11.3"
mypy = "^0.770"

[tool.poetry.scripts]
datasets = 'backend.cli:run'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
